Added search function based on code and name of item. Added menu option on each screen without login.

--- a/app/src/main/res/layout-v21/fragment_new_location.xml
+++ b/app/src/main/res/layout-v21/fragment_new_location.xml
@@ -73,7 +73,8 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:hint="@string/enter_name"
-                        android:inputType="textMultiLine"
+                        android:singleLine="true"
+                        android:inputType="text"
                         android:text=""
                         android:textColorHint="@color/clearWhite"
                         android:textColor="@color/white"
