--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,27 +9,27 @@
     <item
         android:id="@+id/moveToScan"
         android:title="@string/scanning_items"
-        android:visible="false"
+        android:visible="true"
         />
     <item
         android:id="@+id/exportToCSV"
         android:title="@string/save_in_csv_file"
-        android:visible="false"
+        android:visible="true"
         />
     <item
         android:id="@+id/listEmpty"
         android:title="@string/entry_list"
-        android:visible="false"
+        android:visible="true"
         />
     <item
         android:id="@+id/listDesc"
         android:title="@string/scanned_list"
-        android:visible="false"
+        android:visible="true"
         />
     <item
         android:id="@+id/changeLocation"
         android:title="@string/change_location"
-        android:visible="false"
+        android:visible="true"
         />
 
     <item
@@ -40,6 +40,6 @@
     <item
         android:id="@+id/exit"
         android:title="@string/end_app"
-        android:visible="false"
+        android:visible="true"
         />
 </menu>
