--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
@@ -12,49 +11,55 @@
     app:cardCornerRadius="1dp"
     app:cardElevation="7dp">
 
-<RelativeLayout
-                android:id="@+id/layoutSheetsItems"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:paddingBottom="5dp"
-                android:paddingLeft="15dp"
-                android:paddingTop="5dp">
-
-    <!--   android:background="@drawable/cell_shape_darkness2_transparent4"
-     -->
-
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/layoutSheetsItems"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_toLeftOf="@+id/tvAmountPos"
+        android:layout_margin="2dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="15dp"
+        android:paddingTop="5dp">
 
-        android:inputType="textMultiLine"
-        android:text="Terminal VX 675  "
-        android:textSize="16dp"
-        android:textStyle="bold"/>
+        <ImageView
+            android:id="@+id/imgState"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:src="@drawable/barcode"
+            android:tint="@color/grey2"
+            android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/tvAmountPos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="5dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:inputType="number|textMultiLine"
-        android:maxLines="2"
-        android:text="10000"
-        android:textSize="16dp"
-        android:textStyle="bold"/>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/imgState"
+            android:layout_toStartOf="@+id/tvAmountPos"
+            android:text="Terminal VX  Terminal VX 675  Terminal VX 675"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvAmountPos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:inputType="number|textMultiLine"
+            android:maxLines="2"
+            android:text="10000"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
