--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/grey1"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/grey1"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin">
+
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="60dp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="80dp"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/tvLokalization"
+        android:layout_below="@+id/tvTitle"
+        android:layout_marginTop="10dp"
         android:background="@drawable/cell_shape_grey2">
 
 
@@ -22,37 +37,46 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:alpha="1"
-            android:src="@android:drawable/ic_search_category_default"/>
+            android:src="@android:drawable/ic_search_category_default" />
 
         <EditText
             android:id="@+id/etSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/imgClear"
             android:layout_toRightOf="@+id/imgSearch"
             android:hint="@string/enter_name"
             android:inputType="textPersonName"
             android:singleLine="true"
-           android:layout_marginRight="10dp"
             android:textColor="@color/white"
             android:textColorHint="@color/clearWhite"
-            android:textSize="18dp"/>
+            android:textSize="18dp" />
+
+        <ImageView
+            android:id="@+id/imgClear"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:alpha="1"
+            android:src="@android:drawable/ic_menu_close_clear_cancel" />
     </RelativeLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_items"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@android:color/transparent"
-            android:layout_above="@+id/rlSumList"
-            android:layout_below="@+id/relativeLayout1"
-            android:layout_marginTop="10dp"
-            android:dividerHeight="10dp"
-            android:fadingEdge="horizontal" >
-        </android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_items"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/rlSumList"
+        android:layout_below="@+id/relativeLayout1"
+        android:layout_marginTop="10dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"
+        android:fadingEdge="horizontal"></android.support.v7.widget.RecyclerView>
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -63,7 +87,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="180dp"
         android:indeterminate="false"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/rlSumList"
