--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -28,19 +28,31 @@
             android:layout_gravity="center"
             android:src="@drawable/barcode"
             android:tint="@color/grey2"
-            android:visibility="gone"/>
-
+            android:visibility="visible"/>
+        <TextView
+            android:id="@+id/tvCode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@+id/imgState"
+            android:layout_toStartOf="@+id/tvAmountPos"
+            android:text="12122222121"
+            android:textSize="16dp"
+            android:textStyle="bold" />
         <TextView
             android:id="@+id/tvName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="15dp"
             android:layout_marginTop="5dp"
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/imgState"
             android:layout_toStartOf="@+id/tvAmountPos"
+            android:layout_below="@+id/tvCode"
             android:text="Terminal VX  Terminal VX 675  Terminal VX 675"
             android:textSize="16dp"
             android:textStyle="bold" />
