--- a/app/src/main/res/layout-v21/fragment_scan_positions.xml
+++ b/app/src/main/res/layout-v21/fragment_scan_positions.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="60dp"
-    android:background="@color/greyLight"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:background="@color/greyLight"
+              android:orientation="vertical"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin">
 
     <RelativeLayout
         android:id="@+id/sectionLogo"
+        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        android:visibility="visible">
         <TextView
             android:id="@+id/tvLocationLabel"
             android:layout_width="match_parent"
@@ -23,19 +22,20 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:gravity="center"
-            android:text="@string/choose_location"
+            android:text="@string/location"
             android:textColor="@color/grey2"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <ImageView
             android:id="@+id/imgScann"
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:layout_gravity="center"
-            android:src="@drawable/scann_code" />
+            android:src="@drawable/scann_code"/>
 
 
         <TextView
@@ -48,7 +48,7 @@
             android:text="@string/scan_code"
             android:textColor="@color/grey3"
             android:textSize="26dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/addNewItem"
@@ -58,17 +58,19 @@
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="25dp"
             android:layout_marginEnd="15dp"
-            android:src="@drawable/ic_plus_white_18dp"
-            app:backgroundTint="@color/colorLogo" />
+            app:backgroundTint="@color/colorLogo"
+            android:src="@drawable/ic_plus_white_18dp"/>
 
     </RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/sectionScann"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:layout_marginTop="80dp">
 
         <TextView
             android:id="@+id/tvLokalization"
@@ -78,7 +80,7 @@
             android:background="@drawable/cell_shape_grey3"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="18dp" />
+            android:textSize="18dp"/>
 
         <RelativeLayout
             android:id="@+id/relativeLayout1"
@@ -105,7 +107,7 @@
                     android:alpha="1"
                     android:text="EAN:     "
                     android:textColor="@color/grey1"
-                    android:textSize="17dp" />
+                    android:textSize="17dp"/>
             </RelativeLayout>
 
             <ImageView
@@ -116,21 +118,20 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="20dp"
                 android:alpha="1"
-                android:src="@drawable/scan_ean" />
+                android:src="@drawable/scan_ean"/>
 
-            <EditText
-                android:id="@+id/editTextEAN"
+
+            <TextView
+                android:id="@+id/tvEAN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/layoutLogin"
-                android:hint="@string/scan_ean"
                 android:inputType="textPersonName"
-                android:maxLength="13"
                 android:singleLine="true"
-                android:textColor="@color/greyText"
-                android:textColorHint="@color/white"
-                android:textSize="16dp" />
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="16dp"/>
         </RelativeLayout>
 
         <RelativeLayout
@@ -160,7 +161,7 @@
                     android:src="@drawable/scan_ean"
                     android:text="@string/name"
                     android:textColor="@color/grey1"
-                    android:textSize="17dp" />
+                    android:textSize="17dp"/>
 
                 <TextView
                     android:id="@+id/tvName"
@@ -175,12 +176,11 @@
                     android:inputType="textMultiLine"
                     android:minLines="2"
                     android:padding="5dp"
-                    android:text="Nazwa Testowa"
                     android:textColor="@color/white"
                     android:textSize="16dp"
                     android:textStyle="bold">
 
-                    <requestFocus />
+                    <requestFocus/>
                 </TextView>
             </RelativeLayout>
         </RelativeLayout>
@@ -212,7 +212,7 @@
                     android:src="@drawable/scan_ean"
                     android:text="@string/scanned_amount"
                     android:textColor="@color/grey1"
-                    android:textSize="17dp" />
+                    android:textSize="17dp"/>
 
                 <TextView
                     android:id="@+id/tvAmount"
@@ -227,7 +227,7 @@
                     android:singleLine="true"
                     android:textColor="@color/white"
                     android:textSize="16dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
             </RelativeLayout>
         </RelativeLayout>
 
