--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,30 +5,31 @@
     android:layout_height="match_parent"
     android:background="@color/grey1"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin">
+>
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
+        android:layout_height="30dp"
+        android:layout_marginTop="55dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="60dp"
+        android:background="@color/grey2"
         android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="   Lista"
+        android:textColor="@color/clearWhite"
+        android:textSize="14dp" />
 
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvTitle"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:background="@drawable/cell_shape_grey2">
 
 
@@ -73,10 +74,12 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/rlSumList"
         android:layout_below="@+id/relativeLayout1"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
-        android:fadingEdge="horizontal"></android.support.v7.widget.RecyclerView>
+        android:fadingEdge="horizontal"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -94,7 +97,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:id="@+id/txtSumListLabel"
