--- a/app/src/main/res/layout/fragment_scan_positions.xml
+++ b/app/src/main/res/layout/fragment_scan_positions.xml
@@ -69,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_marginTop="80dp">
 
         <TextView
@@ -134,6 +134,51 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/sectionSupportCode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:background="@drawable/cell_shape_grey2"
+            android:visibility="gone">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="20dp">
+
+                <TextView
+                    android:id="@+id/txtSupportCodeLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:alpha="1"
+                    android:src="@drawable/scan_ean"
+                    android:text="@string/support_code_without_asterisk"
+                    android:textColor="@color/grey1"
+                    android:textSize="17dp"/>
+
+                <TextView
+                    android:id="@+id/tvSupportCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_toRightOf="@+id/txtSupportCodeLabel"
+                    android:gravity="start|center_vertical"
+                    android:inputType="textMultiLine"
+                    android:minLines="2"
+                    android:padding="5dp"
+                    android:textColor="@color/white"
+                    android:textSize="16dp"
+                    android:textStyle="bold"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/sectionName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -158,7 +203,7 @@
                     android:layout_centerVertical="true"
                     android:alpha="1"
                     android:src="@drawable/scan_ean"
-                    android:text="@string/name"
+                    android:text="@string/name_without_asterisk"
                     android:textColor="@color/grey1"
                     android:textSize="17dp"/>
 
@@ -177,10 +222,7 @@
                     android:padding="5dp"
                     android:textColor="@color/white"
                     android:textSize="16dp"
-                    android:textStyle="bold">
-
-                    <requestFocus/>
-                </TextView>
+                    android:textStyle="bold"/>
             </RelativeLayout>
         </RelativeLayout>
 
