--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,15 +9,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="242dp"
+        android:layout_above="@+id/btnStartNewInventoryOrContinue"
         android:layout_below="@+id/relativeLayout1"
-        android:layout_above="@+id/btnExportFileAndStartNewInventory"
-        android:gravity="center"
-        >
+        android:gravity="center">
 
         <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_gravity="center"
             android:src="@drawable/icminventory_icon" />
     </LinearLayout>
@@ -68,26 +67,41 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/btnExportFileAndStartNewInventory"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_above="@+id/btnStartNewInventoryOrContinue"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="5dp"
-        android:text="@string/start_new_inventory"
-        android:textSize="17dp">
-    </Button>
-
-    <Button
         android:id="@+id/btnStartNewInventoryOrContinue"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
+        android:layout_above="@+id/btnExportFileAndStartNewEmptyInventory"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:text="@string/continue_current_inventory"
         android:textSize="17dp">
     </Button>
+
+    <Button
+        android:id="@+id/btnExportFileAndStartNewEmptyInventory"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_above="@+id/btnExportFileAndStartNewInventory"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/empty_inventory"
+        android:textSize="17dp">
+    </Button>
+
+    <Button
+        android:id="@+id/btnExportFileAndStartNewInventory"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="5dp"
+        android:text="@string/start_new_inventory"
+        android:textSize="17dp"
+        android:layout_marginBottom="5dp">
+    </Button>
+
+
 </RelativeLayout>
