--- a/app/src/main/res/layout/fragment_scan_positions.xml
+++ b/app/src/main/res/layout/fragment_scan_positions.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:background="@color/greyLight"
-              android:orientation="vertical"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/greyLight"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin">
 
     <RelativeLayout
         android:id="@+id/sectionLogo"
@@ -31,27 +31,26 @@
 
         <ImageView
             android:id="@+id/imgScann"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginTop="80dp"
-            android:src="@drawable/scan_ean" />
+            android:src="@drawable/scan_ean"/>
 
 
         <TextView
             android:id="@+id/tvScanCode"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="30dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/imgScann"
             android:gravity="center"
             android:text="@string/scan_code"
             android:textColor="@color/grey3"
             android:textSize="26dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/addNewItem"
