--- a/app/src/main/res/layout/fragment_scan_positions.xml
+++ b/app/src/main/res/layout/fragment_scan_positions.xml
@@ -1,49 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/greyLight"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:background="@color/greyLight"
+              android:orientation="vertical"
+                android:layout_marginTop="80dp"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin">
+
+    <TextView
+        android:id="@+id/tvLokalization"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/cell_shape_grey3"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="18dp"/>
 
     <RelativeLayout
         android:id="@+id/sectionLogo"
-        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="visible">
-        <TextView
-            android:id="@+id/tvLocationLabel"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:gravity="center"
-            android:text="@string/location"
-            android:textColor="@color/grey2"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent" />
-
 
         <ImageView
             android:id="@+id/imgScann"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="50dp"
             android:layout_width="250dp"
             android:layout_height="250dp"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:src="@drawable/scan_ean"/>
+            android:layout_marginTop="80dp"
+            android:src="@drawable/scan_ean" />
 
 
         <TextView
             android:id="@+id/tvScanCode"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginTop="30dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/imgScann"
             android:gravity="center"
@@ -51,18 +49,6 @@
             android:textColor="@color/grey3"
             android:textSize="26dp"
             android:textStyle="bold"/>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/addNewItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="25dp"
-            android:layout_marginEnd="15dp"
-            app:backgroundTint="@color/colorLogo"
-            android:src="@drawable/ic_plus_white_18dp"/>
-
     </RelativeLayout>
 
 
@@ -71,18 +57,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="visible"
-        android:layout_marginTop="80dp">
+        android:layout_below="@+id/tvLokalization"
+        android:visibility="gone">
 
-        <TextView
-            android:id="@+id/tvLokalization"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/cell_shape_grey3"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="18dp"/>
 
         <RelativeLayout
             android:id="@+id/relativeLayout1"
@@ -276,4 +253,33 @@
 
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="end"
+        android:layout_alignParentBottom="true"
+        >
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addNewItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/sectionLogo"
+        android:layout_above="@id/back"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="15dp"
+        android:src="@drawable/ic_plus_white_18dp"
+        app:backgroundTint="@color/colorLogo"/>
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="5dp"
+        android:visibility="gone"
+        android:text="@string/back"
+        android:textSize="17dp"/>
+    </LinearLayout>
+</RelativeLayout>
