--- a/app/src/main/res/layout/fragment_scan_positions.xml
+++ b/app/src/main/res/layout/fragment_scan_positions.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:background="@color/greyLight"
+              android:background="@color/white"
               android:orientation="vertical"
                 android:layout_marginTop="80dp"
               android:paddingLeft="@dimen/activity_horizontal_margin"
