--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="300dp"
-                android:layout_height="180dp"
-                android:layout_gravity="center"
+                android:layout_height="wrap_content"
                 android:padding="5dp"
+    android:layout_gravity="center"
     >
 
     <TextView
@@ -13,17 +13,34 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
+        android:clickable="true"
         android:padding="5dp"
         android:text="@string/no_tem_for_code"
         android:textSize="20dp"/>
+
+
+    <TextView
+        android:id="@+id/tvDownload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:visibility="gone"
+        android:layout_below="@id/tvTitle"
+        android:layout_centerHorizontal="true"
+        android:padding="5dp"
+        android:text="@string/go_to_google_play"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/blue400"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
 
     <Button
         android:id="@+id/bOk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvTitle"
-        android:layout_marginTop="40dp"
+        android:layout_below="@id/tvDownload"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:text="OK"/>
 
