--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/white"
-              android:orientation="vertical"
-              android:gravity="center"
-              app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:gravity="top"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="50dp"
-        android:padding="20dp"
-        android:layout_weight="1"
-        android:src="@drawable/icminwentory_title"/>
+        android:layout_height="150dp"
+        android:layout_marginTop="56dp"
+        android:src="@drawable/icminwentory_title" />
 
     <TextView
-        android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center|top"
         android:text="@string/company_info"
-        android:textAlignment="center"/>
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|top"
+        android:linksClickable="true"
+        android:autoLink="web"
+        android:textColorLink="@color/blue400"
+        android:text="@string/website"
+        android:textAlignment="center" />
 
 </LinearLayout>
 
