Added small scan image. Prepared for play store.

--- a/app/src/main/res/layout/fragment_new_position.xml
+++ b/app/src/main/res/layout/fragment_new_position.xml
@@ -48,7 +48,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:alpha="1"
-                    android:src="@drawable/scan_ean"
+                    android:src="@drawable/scan_ean_small"
                     android:text="@string/code"
                     android:textColor="@color/clearWhite"
                     android:textSize="17dp"
