Added dialog when removing item drom scanned list. Improved code.

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -20,13 +20,25 @@
         android:text="   Lista"
         android:textColor="@color/clearWhite"
         android:textSize="14dp" />
+    <TextView
+        android:id="@+id/tvLocation"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/tvTitle"
+        android:background="@color/grey2"
+        android:gravity="center"
+        android:text="@string/location"
+        android:textColor="@color/clearWhite"
+        android:textSize="14dp" />
 
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@+id/tvTitle"
+        android:layout_below="@+id/tvLocation"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
