--- a/app/src/main/res/layout/dialog_change_amount.xml
+++ b/app/src/main/res/layout/dialog_change_amount.xml
@@ -6,15 +6,33 @@
     android:layout_gravity="center"
     android:layout_marginTop="10dp">
 
+
+    <TextView
+        android:id="@+id/tvCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/rlAmount"
+        android:layout_marginTop="15dp"
+        android:textSize="17dp"
+        android:text="Code" />
+
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/rlAmount"
+        android:layout_below="@id/tvCode"
+        android:textSize="17dp"
+        android:text="Name" />
+
     <RelativeLayout
         android:id="@+id/rlAmount"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="30dp" 
-        android:layout_centerHorizontal="true"
-        
-        >
+        android:layout_below="@id/tvName"
+        android:layout_centerHorizontal="true">
 
         <ImageView
             android:id="@+id/imgRemoveAmount"
@@ -80,10 +98,10 @@
     <Button
         android:id="@+id/bOK"
         android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/rlAmount"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:text="OK" />
 
 </RelativeLayout>
